--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"NaxyJkv7s4Fi5ZGgseFLbKsJ","projectId":"QmS5QHYHsafbxrVC2RKegP2mBw6UnR3LEh4xsHk8pgjHkt"}
+{"projectId":"prj_zPI4XIYwJG4LDaS9jcAq8FifhWSs","orgId":"PDJsNJ3abx5RAIBlHqaY97s4"}
